--- a/sass/main.scss
+++ b/sass/main.scss
@@ -313,10 +313,10 @@ footer {
 
 
 
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 812px) 
-  and (-webkit-min-device-pixel-ratio: 3) { 
+@media screen 
+and (min-device-width: 320px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
 
     .menuNavBG {
         background-color: $text;
