Fix form php. Add about video.

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -46,5 +46,13 @@
                 }
             }
         }
+
+        &.community {
+            video {
+                height: 700px;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
     }
 }
