--- a/sass/main.scss
+++ b/sass/main.scss
@@ -171,6 +171,7 @@ header {
     height: 100vh;
     color: $white;
     font-weight: bold;
+    position: relative;
 
     #open-menu {
         visibility: hidden;
@@ -208,6 +209,10 @@ header {
             li a {
                 padding: 1rem;
                 position: relative;
+
+                &:hover {
+                    color: unset;
+                }
             }
 
             li a:after {    
@@ -246,9 +251,15 @@ header {
         }
     }
     .header-text {
-        height: 100%;
+        position: absolute;
+        top: 10vh;
+        left: 0;
+        height: 90vh;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         text-align: center;
-        margin-top: 15%;
     }
 }
 
@@ -301,50 +312,7 @@ footer {
     }
 }
 
-.modal-video {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
-    z-index: 5;
-    opacity: 0;
-    overflow: hidden;
-    visibility: hidden;
-    transform: scale(1.1);
-    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 
-    .close-button {
-        cursor: pointer;
-        color: $white;
-        font-size: 3rem;
-        position: absolute;
-        top: 0;
-        right: 20px;
-    }
-
-    .modal-content {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        overflow: hidden;
-        
-        .wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-        }
-    }
-}
-
-.show-modal {
-    opacity: 1;
-    visibility: visible;
-    transform: scale(1.0);
-    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
-}
 
 // Partials
 @import "home", "about", "locations", "sermons";
@@ -526,11 +494,6 @@ and (min-device-width: 320px)
         .content-wrapper {
             justify-content: space-between;
         }
-
-        .header-text {
-            margin-top: 50%;
-        }
-
     }
 
     footer {
@@ -560,6 +523,32 @@ and (min-device-width: 320px)
 
     #home {
         section.livestream {
+            .row {
+                flex-direction: column;
+            }
+
+            .live {
+                a.chat-btn {
+                    display: block;
+                    margin: 1.6rem auto;
+                    width: 80%;
+                }
+
+                .live-vid {
+                    height: 30vh;
+                    width: 100%;
+                }
+
+                .live-chat {
+                    height: 0;
+                    width: 100%;
+                    transition: ease-in-out 0.3s;
+
+                    &.open {
+                        height: 35vh;
+                    }
+                }
+            }
             .img-container {
                 width: 100%;
             }
@@ -615,7 +604,7 @@ and (min-device-width: 320px)
             }
 
             .img-container {
-                width: 90%;
+                width: 40%;
             }
 
             ul.socials {
@@ -661,6 +650,22 @@ and (min-device-width: 320px)
                 }
             }
 
+            .modal-video {
+                .modal-content {
+                    width: 90%;
+                    margin: auto;
+                    
+                    .wrapper {
+                        height: 100vh;
+                        align-items: center;
+
+                        iframe {
+                            width: 720px;
+                            height: 360px;
+                        }
+                    }
+                }
+            } 
         }
     }
 
