--- a/sass/main.scss
+++ b/sass/main.scss
@@ -344,14 +344,19 @@ footer {
     }
 }
 
-
-
+@media screen 
+and (max-width: 320px) {
+    header {
+        h1 {
+            font-size: 46px;
+        }
+    }
+}
 
 
 @media screen 
-and (min-device-width: 320px) 
-  and (max-device-width: 1024px) 
-  and (-webkit-min-device-pixel-ratio: 1) { 
+and (min-width: 320px)
+  and (max-width: 1024px) { 
 
     .menuNavBG {
         background-color: $text;
@@ -527,6 +532,15 @@ and (min-device-width: 320px)
                 flex-direction: column;
             }
 
+            .join {
+                h2 {
+                    text-align: center;
+                }
+                .img-container {
+                    width: 80vw;
+                }
+            }
+
             .live {
                 a.chat-btn {
                     display: block;
@@ -549,9 +563,7 @@ and (min-device-width: 320px)
                     }
                 }
             }
-            .img-container {
-                width: 100%;
-            }
+            
             h2, li {
                 text-align: center;
             }
