--- a/sass/main.scss
+++ b/sass/main.scss
@@ -321,7 +321,7 @@ footer {
 
 #contact {
     header {
-        background: linear-gradient(to bottom right, rgba(46,46,46,0.4), rgba(46,46,46,1)), url("../assets/contact-header.jpg") no-repeat center;
+        background: linear-gradient(to bottom right, rgba(46,46,46,0.4), rgba(46,46,46,1)), url("../assets/contactus-header.jpg") no-repeat center;
         background-size: cover;
         height: 60vh;
 
