--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,4 +1,59 @@
 #home {
+    #prayerPopup {
+        position: fixed;
+        bottom: 1rem;
+        right: 1rem;
+        z-index: 1;
+        background-color: rgba($text, 0.9);
+        border-radius: 5px;
+        text-align: center;
+        padding: 2rem;
+        width: 20%;
+        -webkit-box-shadow: 10px 10px 33px 0px rgba(0,0,0,0.29);
+        -moz-box-shadow: 10px 10px 33px 0px rgba(0,0,0,0.29);
+        box-shadow: 10px 10px 33px 0px rgba(0,0,0,0.29);
+        color: $white;
+        visibility: hidden;
+        opacity: 0;
+        transition: ease-in-out 0.3s;
+
+        &.open {
+            visibility: visible;
+            opacity: 1;
+        }
+
+        &.close {
+            visibility: hidden;
+            opacity: 0;
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 1rem;
+            right: 1.3rem;
+            cursor: pointer;
+        }
+
+        h2 {
+            font-size: 30px;
+        }
+
+        .btn-outline {
+            border-color: $highlight;
+            color: $highlight;
+            font-weight: bold;
+            margin-top: 1.7rem;
+    
+            &:hover, &:focus, &:active {
+                color: $white;
+            }
+            
+            &:before {
+                background: $highlight;
+            }
+        }
+    }
+
     header {
         background: linear-gradient(to bottom right, rgba(46,46,46,0.4), rgba(46,46,46,1)), url("../assets/home-header.jpg") no-repeat right    ;
         background-size: cover;
