--- a/sass/main.scss
+++ b/sass/main.scss
@@ -702,6 +702,26 @@ and (min-width: 320px)
             section.affiliates {
                 .grid {
                     display: block;
+
+                    a.item {
+                        flex-direction: column;
+                        justify-content: center;
+                        text-align: center;
+                        margin: 2rem auto;
+                        width: 90%;
+
+                        .text {
+                            width: 100%;
+                        }
+
+                        h4 {
+                            display: inline-block;
+                        }
+
+                        img {
+                            margin: 0;
+                        }
+                    }
                 }
             }
         }
