Fix contact page and locations page. Add core values. Soft release.

--- a/sass/_locations.scss
+++ b/sass/_locations.scss
@@ -16,6 +16,14 @@
         }
 
         section.ph {
+            ul.socials {
+                text-align: right;
+            }
+
+            .text {
+                width: 20%;
+            }
+
             .row {
                 padding: 5rem 0;
             }
