--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -42,6 +42,15 @@
             text-align: center;
         }
 
+        &.values {
+            text-align: center;
+
+            li {
+                line-height: 2.4rem;
+                font-size: 1.3rem;
+            }
+        }
+
         &.mission {
 
             ul {
