--- a/sass/main.scss
+++ b/sass/main.scss
@@ -351,37 +351,90 @@ footer {
 
 
 #contact {
-    header {
-        background: linear-gradient(to bottom right, rgba(46,46,46,0.4), rgba(46,46,46,1)), url("../assets/contactus-header.jpg") no-repeat center;
-        background-size: cover;
-        height: 60vh;
+    background-color: $highlight;
+    min-height: 100vh;
 
-        .header-text {
-            height: 50vh;
+    .wrapper {
+        display: flex;
+        align-items: center;
+        width: 80%;
+        margin: auto;
+        height: 90vh;
+        overflow: hidden;
+    }
+
+    header {
+        // background: linear-gradient(to bottom right, rgba(46,46,46,0.4), rgba(46,46,46,1)), url("../assets/contactus-header.jpg") no-repeat center;
+        // background-size: cover;
+        // height: 60vh;
+
+        // .header-text {
+        //     height: 50vh;
+        // }
+
+        height: 10vh;
+        // color: $text;
+
+        li a:after {
+            background: $white;
         }
     }
 
     .button.send {
-        background-color: $highlight;
-        border: none;
-        color: $white;
+        background-color: $white;
         transition: ease-in-out 0.3s;
 
         &:hover {
-            background-color: rgba($highlight, 0.8);
+            background-color: rgba($white, 0.8);
         }
     }
 
+    ul.follow-socials {
+        width: 25%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        font-size: 1.6rem;
+    }
+
+    .columns {
+        align-items: flex-start;
+        width: 100%;
+    }
+
     section.contact-form {
-        padding: 4rem 0;
+        padding: 3rem;
 
         form {
-            width: 80%;
-            margin: auto;
+            width: 90%;
         }
 
         .modal-content {
             width: 80%;
+        }
+    }
+
+    section.email-adds {
+        background-color: $highlight;
+        padding: 3rem;
+        display: flex;
+        
+
+        .container {
+            width: 50%;
+            margin: auto;
+        }
+
+        h2.follow {
+            margin-top: 2rem;
+        }
+
+        li {
+            line-height: 2.5rem;
+
+            a.emails {
+                font-size: 1.4rem;
+            }
         }
     }
 }
@@ -687,6 +740,13 @@ and (min-width: 320px)
                 text-align: left;
                 width: fit-content;
                 margin: auto;
+            }
+
+            section.ph {
+
+                .text {
+                    width: 100%;
+                }
             }
 
             ul.timings {
